Try to silent ffmpeg deprecated

--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -6,6 +6,8 @@
 
 APPLY_COMMON_POLICIES()
 
+REMOVE_COMPILER_WARNINGS("-Wdeprecated-declarations")
+
 # The QtAV library does not adhere to the flags we use
 remove_definitions(
     -DQT_USE_QSTRINGBUILDER
