Cleanup preprocessor rules for QtAV CCBUGS: 448681

--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -40,6 +40,16 @@ remove_definitions(
     -DQT_DISABLE_DEPRECATED_BEFORE=0x050E00
 )
 
+macro(MACRO_ADD_DEFINITION_IF_ON VAR_NAME VAR_ON)
+
+    if("${VAR_ON}" EQUAL "1")
+
+        add_definitions(-D${VAR_NAME}=1)
+
+    endif()
+
+endmacro()
+
 include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Widgets,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Core,INTERFACE_INCLUDE_DIRECTORIES>
 )
@@ -306,9 +316,9 @@ if(OPENAL_FOUND)
 
 endif()
 
-add_definitions(-DQTAV_HAVE_OPENAL=${HAVE_LIBOPENAL})
-add_definitions(-DQTAV_HAVE_PORTAUDIO=${HAVE_LIBPORTAUDIO})
-add_definitions(-DQTAV_HAVE_PULSEAUDIO=${HAVE_LIBPULSEAUDIO})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_OPENAL ${HAVE_LIBOPENAL})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_PORTAUDIO ${HAVE_LIBPORTAUDIO})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_PULSEAUDIO ${HAVE_LIBPULSEAUDIO})
 
 if(APPLE)
 
@@ -322,17 +332,18 @@ else()
 
 endif()
 
-add_definitions(-DQTAV_HAVE_AVCODEC=${HAVE_LIBAVCODEC})
-add_definitions(-DQTAV_HAVE_AVDEVICE=${HAVE_LIBAVDEVICE})
-add_definitions(-DQTAV_HAVE_AVFILTER=${HAVE_LIBAVFILTER})
-add_definitions(-DQTAV_HAVE_AVFORMAT=${HAVE_LIBAVFORMAT})
-add_definitions(-DQTAV_HAVE_AVUTIL=${HAVE_LIBAVUTIL})
-add_definitions(-DQTAV_HAVE_SWSCALE=${HAVE_LIBSWSCALE})
-add_definitions(-DQTAV_HAVE_AVRESAMPLE=${HAVE_LIBAVRESAMPLE})
-add_definitions(-DQTAV_HAVE_SWRESAMPLE=${HAVE_LIBSWRESAMPLE})
-add_definitions(-DQTAV_HAVE_X11=${HAVE_LIBX11})
-add_definitions(-DQTAV_HAVE_EGL_CAPI=${HAVE_LIBOPENGL_EGL})
-add_definitions(-DQTAV_HAVE_VAAPI=${HAVE_LIBVAAPI})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVCODEC ${HAVE_LIBAVCODEC})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVDEVICE ${HAVE_LIBAVDEVICE})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVFILTER ${HAVE_LIBAVFILTER})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVUTIL ${HAVE_LIBAVUTIL})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_SWSCALE ${HAVE_LIBSWSCALE})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVRESAMPLE ${HAVE_LIBAVRESAMPLE})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_SWRESAMPLE ${HAVE_LIBSWRESAMPLE})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_EGL_CAPI ${HAVE_LIBOPENGL_EGL})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_VAAPI ${HAVE_LIBVAAPI})
+
+# This one is never used in QtAV
+#MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_X11 ${HAVE_LIBX11})
 
 # -------------------------------------------------------------------------
 
