fix init members order warnings

--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -12,7 +12,7 @@ REMOVE_COMPILER_WARNINGS("-Wdeprecated-declarations")
 REMOVE_COMPILER_WARNINGS("-Wnon-virtual-dtor")
 REMOVE_COMPILER_WARNINGS("-Wundef")
 REMOVE_COMPILER_WARNINGS("-Wexpansion-to-defined")
-REMOVE_COMPILER_WARNINGS("-Wreorder")
+#REMOVE_COMPILER_WARNINGS("-Wreorder")
 REMOVE_COMPILER_WARNINGS("-Wformat-extra-args")
 REMOVE_COMPILER_WARNINGS("-Wunused-parameter")
 REMOVE_COMPILER_WARNINGS("-Woverloaded-virtual")
@@ -23,7 +23,7 @@ DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-deprecated-declarations")
 DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-non-virtual-dtor")
 DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-undef")
 DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-expansion-to-defined")
-DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-reorder")
+#DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-reorder")
 DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-format-extra-args")
 DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-unused-parameter")
 DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-overloaded-virtual")
