fix broken compilation under MSVC due to Digikam::filter.h and QtAV::Filter.h (yes, Windows is not case sensitive...)

--- a/core/utilities/import/CMakeLists.txt
+++ b/core/utilities/import/CMakeLists.txt
@@ -51,7 +51,7 @@ set(libimportui_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/albumcustomizer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/advancedsettings.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/scriptingsettings.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/filter.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/importfilter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/importfiltercombobox.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/importcontextmenu.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/dngconvertsettings.cpp
