--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -120,8 +120,8 @@ qt5_add_resources(libqtav_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/shaders/shaders.q
                                ${CMAKE_CURRENT_SOURCE_DIR}/src/QtAV.qrc
 )
 
-file(GLOB QTAV_HEADERS                 ${CMAKE_CURRENT_SOURCE_DIR}/src/QtAV/*.h)
-file(GLOB QTAV_PRIVATE_HEADERS         ${CMAKE_CURRENT_SOURCE_DIR}/src/QtAV/private/*.h)
+file(GLOB QTAV_HEADERS         ${CMAKE_CURRENT_SOURCE_DIR}/src/QtAV/*.h)
+file(GLOB QTAV_PRIVATE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/QtAV/private/*.h)
 
 set(QTAV_WIDGETS_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/QtAVWidgets/global.h
@@ -290,7 +290,7 @@ if(ASS_FOUND)
 
 endif()
 
-add_definitions(-DQTAV_HAVE_LIBASS=${HAVE_LIBASS})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_LIBASS ${HAVE_LIBASS})
 
 if(OPENAL_FOUND)
 
@@ -302,8 +302,8 @@ if(OPENAL_FOUND)
 
 endif()
 
-MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_OPENAL ${HAVE_LIBOPENAL})
-MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_PORTAUDIO ${HAVE_LIBPORTAUDIO})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_OPENAL     ${HAVE_LIBOPENAL})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_PORTAUDIO  ${HAVE_LIBPORTAUDIO})
 MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_PULSEAUDIO ${HAVE_LIBPULSEAUDIO})
 
 if(APPLE)
@@ -318,15 +318,15 @@ else()
 
 endif()
 
-MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVCODEC ${HAVE_LIBAVCODEC})
-MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVDEVICE ${HAVE_LIBAVDEVICE})
-MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVFILTER ${HAVE_LIBAVFILTER})
-MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVUTIL ${HAVE_LIBAVUTIL})
-MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_SWSCALE ${HAVE_LIBSWSCALE})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVCODEC    ${HAVE_LIBAVCODEC})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVDEVICE   ${HAVE_LIBAVDEVICE})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVFILTER   ${HAVE_LIBAVFILTER})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVUTIL     ${HAVE_LIBAVUTIL})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_SWSCALE    ${HAVE_LIBSWSCALE})
 MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_AVRESAMPLE ${HAVE_LIBAVRESAMPLE})
 MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_SWRESAMPLE ${HAVE_LIBSWRESAMPLE})
-MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_EGL_CAPI ${HAVE_LIBOPENGL_EGL})
-MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_VAAPI ${HAVE_LIBVAAPI})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_EGL_CAPI   ${HAVE_LIBOPENGL_EGL})
+MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_VAAPI      ${HAVE_LIBVAAPI})
 
 # This one is never used in QtAV
 #MACRO_ADD_DEFINITION_IF_ON(QTAV_HAVE_X11 ${HAVE_LIBX11})
