fix coding style move test code at the right place (do not compile yet)

--- a/core/tests/video/CMakeLists.txt
+++ b/core/tests/video/CMakeLists.txt
@@ -117,6 +117,7 @@ QTAV_TESTS_BUILD(decoder.cpp)
 QTAV_TESTS_BUILD(extract.cpp)
 QTAV_TESTS_BUILD(playerthread.cpp)
 QTAV_TESTS_BUILD(qiodevice.cpp)
+#QTAV_TESTS_BUILD(qiodeviceio.cpp)
 QTAV_TESTS_BUILD(qrc.cpp)
 QTAV_TESTS_BUILD(subtitle.cpp)
 QTAV_TESTS_BUILD(transcode.cpp)
