Try to fix MSVC build about classes file-name conflicts with QTAV API. This is the first time that we compile MediaPlayer support on native Windows.

--- a/core/libs/threadimageio/CMakeLists.txt
+++ b/core/libs/threadimageio/CMakeLists.txt
@@ -47,8 +47,8 @@ if(ENABLE_MEDIAPLAYER)
     set(libthreadimageio_SRCS
         ${libthreadimageio_SRCS}
         ${CMAKE_CURRENT_SOURCE_DIR}/video/videostripfilter.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/video/videodecoder.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/video/videodecoder_p.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/video/videothumbdecoder.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/video/videothumbdecoder_p.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/video/videothumbwriter.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/video/videothumbnailer.cpp
     )
