--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -224,7 +224,7 @@ if(HAVE_OPENGL)
 
     endif()
 
-    if(GDI_FOUND)
+    if(GDIPLUS_FOUND)
 
         set(libqtav_SRCS ${libqtav_SRCS}
             ${CMAKE_CURRENT_SOURCE_DIR}/widgets/GDIRenderer.cpp
