Add DirectX 2D support QtAV

--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -232,6 +232,14 @@ if(HAVE_OPENGL)
 
     endif()
 
+    if(Direct2D_FOUND)
+
+        set(libqtav_SRCS ${libqtav_SRCS}
+            ${CMAKE_CURRENT_SOURCE_DIR}/widgets/Direct2DRenderer.cpp
+        )
+
+    endif()
+
 endif()
 
 if(ASS_FOUND)
